- partionning:
  o GPT: prevent geometry issue on last partition (mga#18666, mga#17796)
  o restrict fdisk -l output to usefull disks
- recognize new kernel-4.7 drivers
- try to get patch from ext[2-4] removable media instead of just ext2

Version 17.48 - 4 July 2016

- bootloader configuration:
  o allow installing grub2 on XFS /
  o make clear grub2 is installed on ESP under UEFI
  o make sure we only offer lilo/grub choice on upgrades only
- partionning:
  o do not offer to check for bad blocks on btrfs (mga#12393)
  o do not warn about no bootloader can boot LVM as grub2 can (mga#9426)
  o do not warn about no bootloader can boot RAID[^1] as grub2 can (mga#11324)
  o enable bad blocks checking on JFS
- summary:
  o add help link for sound (mga#11824)

Version 17.47 - 30 June 2016

- partionning:
  o fix being able to create vfat on UEFI (mga#15698)
- recognize some missing wireless drivers (mga#16768)
- users:
  o offer again to add user to admin group (mga#17720)

Version 17.46 - 24 June 2016

- library:
  o enable compssUsers.pl to pick the right lsb-core-lib(64) flavor

Version 17.45 - 24 June 2016

- partionning:
  o keep UUID when formating btrfs (mga#18673)

Version 17.44 - 24 June 2016

- bootloader configuration:
  o add a "Do not touch ESP or MBR" option (mga#18770)
  o do not offer to pick the disk where to install grub2 on UEFI
  o filter GPT disks w/o a BIOS boot part (mga#18770)
  o warn if grub2 is not installed on MBR/ESP
- logs:
  o fix found kernel names
  o log if were running under UEFI
- partionning:
  o fix preserving UUID when formating jfs/nilfs/xfs
- package selection:
  o display a wait dialog when choosing custom choice (mga#11041)
- summary:
  o sort service categories, putting "Other" at end (mga#6286)

Version 17.43 - 22 June 2016

- summary:
  o fix not listing some services (mga#17288)
  o fix updating firewall status after configuration (mga#17288)

Version 17.42 - 22 June 2016

- bootloader configuration: