@@ -1,3 +1,5 @@
+- autoinst:
+  o enable to select media (mga#12299)
 - partionning:
   o GPT: prevent geometry issue on last partition (mga#18666, mga#17796)
   o restrict fdisk -l output to usefull disks
